styling almost done

--- a/src/Styles.scss
+++ b/src/Styles.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Space+Mono:wght@700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Space+Mono:wght@700&display=swap");
 
 //VARIABLES:
 
@@ -13,11 +13,187 @@ $White: hsl(0, 0%, 100%);
 //- Font size (form inputs): 24px
 
 .space-mono-bold {
-    font-family: "Space Mono", monospace;
-  }
+  font-family: "Space Mono", monospace;
+}
 
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+main {
+  font-family: "Space Mono", monospace;
+  height: 100vh;
+  width: 100vw;
+  background-color: $Light-grayish-cyan;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  .container {
+    display: flex;
+    flex-direction: column;
+    gap: 100px;
+    align-items: center;
+    justify-content: center;
+
+    .logo-container {
+      height: 100px;
+      width: 100px;
+      background-image: url("./src/assets/logo.svg");
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: contain;
+    }
+  }
+}
+
+.app {
+  height: 600px;
+  width: 1000px;
+  background-color: white;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 50px;
+  padding: 50px;
+  border-radius: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 50px;
+}
+
+.left {
+  display: flex;
+  width: 50%;
+  height: 100%;
+  flex-direction: column;
+  align-items: baseline;
+  justify-content: space-between;
+  padding: 10px 0;
+
+  .simple-section {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+
+    .labels {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+
+      .label-p {
+        color: $Dark-grayish-cyan;
+      }
+
+      .error {
+        color: rgb(200, 66, 66);
+      }
+    }
+
+    .big-input {
+      all: unset;
+      height: 60px;
+      background-color: $Very-light-grayish-cyan;
+      border-radius: 8px;
+      text-align: end;
+      font-size: 24px;
+      color: $Very-dark-cyan;
+      padding-right: 20px;
+    }
+
+    #bill {
+        background-image: url("src/assets/icon-dollar.svg");
+        background-position: 20px;
+        background-repeat: no-repeat;
+    }
+
+    #people {
+        background-image: url("src/assets/icon-person.svg");
+        background-position: 20px;
+        background-repeat: no-repeat;
+    }
+
+    input::-webkit-outer-spin-button,
+    input::-webkit-inner-spin-button {
+      -webkit-appearance: none;
+      margin: 0;
+    }
+  }
+
+  .tip-section {
+    width: 100%;
+    .label-p {
+      color: $Dark-grayish-cyan;
+      margin-bottom: 8px;
+    }
+
+    .grid {
+      display: grid;
+      justify-content: space-between;
+      grid-template-columns: 30% 30% 30%;
+      gap: 20px;
+
+      button {
+        all: unset;
+        background-color: $Very-dark-cyan;
+        color: $Very-light-grayish-cyan;
+        font-size: 24px;
+        text-align: center;
+        height: 60px;
+        border-radius: 8px;
+      }
+    }
+  }
+}
+
+.right {
+  display: flex;
+  width: 50%;
+  height: 100%;
+  flex-direction: column;
+  align-items: baseline;
+  justify-content: space-between;
+  padding: 40px;
+  background-color: $Very-dark-cyan;
+  border-radius: 20px;
+
+  .sections {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+
+    .amount-section {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+
+      h2 {
+        color: $Very-light-grayish-cyan;
+        font-size: 18px;
+      }
+
+      p {
+        color: $Grayish-cyan;
+        font-size: 14px;
+      }
+
+      h1 {
+        color: $Strong-cyan;
+        font-size: 40px;
+      }
+    }
+  }
+
+  button {
+    all: unset;
+    color: $Very-dark-cyan;
+    background-color: $Strong-cyan;
+    height: 60px;
+    width: 100%;
+    text-align: center;
+    border-radius: 8px;
+    font-size: 24px;
+  }
 }
