--- a/src/Styles.scss
+++ b/src/Styles.scss
@@ -100,7 +100,15 @@ main {
       font-size: 24px;
       color: $Very-dark-cyan;
       padding-right: 20px;
+      border: 3px solid $Very-light-grayish-cyan;
+
+
+      &:focus {
+      border: 3px solid $Strong-cyan;  
+      }
     }
+
+
 
     #bill {
         background-image: url("src/assets/icon-dollar.svg");
@@ -147,6 +155,10 @@ main {
           color: $Very-dark-cyan;
           background-color: $Light-grayish-cyan;
           cursor: pointer;
+        }
+
+        &.active {
+          background-color: red;
         }
       }
 
